.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Booked_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Booked_Timestamp__c</fullName>
    <label>Booked Timestamp</label>
    <type>DateTime</type>
</CustomField>