.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Booking_End_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Booking_End_Time_Local__c</fullName>
    <label>Booking End Time (Local)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>