.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Booking_Start_Time_Session__c.field-meta.xml
<CustomField>
    <fullName>Booking_Start_Time_Session__c</fullName>
    <label>Booking Start Time (Session)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>