.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>b3o__Session__r.Branch__r.Branch_Name__c</formula>
    <label>Branch</label>
    <type>Text</type>
</CustomField>