.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Consultant_Email_sent__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Email_sent__c</fullName>
    <label>Consultant Email sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>