.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Session Invitations</relationshipLabel>
    <relationshipName>Session_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>