.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Session_Invitation__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <description>Checks the session type based on the session name.</description>
    <formula>b3o__Session__r.Session_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks the session type based on the session name.</inlineHelpText>
    <label>Session Type</label>
    <type>Text</type>
</CustomField>